--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,30 +5,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/orange"
+    android:background="@drawable/gradient_drawable"
     tools:context=".ui.Splash.SplashActivity">
-
-    <ImageView
-        android:id="@+id/imageViewSplash"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/icon_hlop"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textTitleSplash"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/langar"
         android:text="@string/movies"
-        android:textSize="50sp"
         android:textColor="@color/white"
+        android:textSize="50sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/imageViewSplash"
-        app:layout_constraintStart_toStartOf="@+id/imageViewSplash"
-        app:layout_constraintTop_toBottomOf="@+id/imageViewSplash" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
