--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="light_red">#7DD81B60</color>
     <color name="light_orange">#7EFB8C00</color>
     <color name="light_green">#7D7CB342</color>
+    <color name="background">#121A21</color>
 </resources>
